--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <body>
     <div class="logo">
       <h1>Flatacuties</h1>
+      <button onclick="Cute()" type="button" class="btn1">Mr. Cute</button>
+      <button onclick="Monkey()" type="button" class="btn2">Mx. Monkey</button>
+      <button onclick="Zebra()" type="button" class="btn3">Ms. Zebra</button>
+      <button onclick="Lion()" type="button" class="btn4">Dr. Lion</button>
+      <button onclick="Panda()" type="button" class="btn5">Mme. Panda</button>
+
     </div>
 
     <div id="character-bar">
@@ -17,7 +23,7 @@
         <p id="name">Character's Name</p>
         <img
           id="image"
-          src="assets/dummy.gif"
+          src="assets/Cute.jpeg"
           alt="Character's Name"
         /><!-- display character image here -->
         <h4>Total Votes: <span id="vote-count">Character's Votes</span></h4>
